# cook-serve-delicious-bot

./: .gitignore  .gitmodules  pyproject.toml  setup.py
libs/botkit/: .gitignore  pyproject.toml
libs/botkit/src/botkit/: darwin_sensor_util.py  img_logger.py  sensor_util.py  win32_sensor_util.py
src/: main.py  properties.py  run_capture.py  use_cases.py
src/core/: brain.py  menu.py  menu_optimization.py  model.py  motor.py  sensor.py
src/core/resources/: equipments.json  foods.json  tasks.json
src/kit/: _base_sensor_util.py  darwin_sensor_util.py  img_logger.py  sensor_util.py  text.py  win32_sensor_util.py
test/: brain_sensor_integration_test.py  brain_test.py  burger_test.py  dirty_statement_test.py  sensor_hour_test.py  sensor_statement_test.py  sensor_test.py  sensor_waiting_tasks_test.py  soda_fountain_test.py  suite_utils.py
test/kit_test/: autocorrect_test.py
test/poc/: macos_screenshot.py  parse_img.py  recipe.py  recipe_typing.py  troubleshoot_statement.py
test/resources/: 5-tasks.tiff  6-tasks.tiff  bot-dont-want-to-clean-the-dishes.tiff  chomper-plate.tiff  medium-grape-w-flavor-blast.tiff  medium_cola.tiff  red_deluxe_pasta.tiff  robbery.tiff  sushi.tiff  task-1-2-waiting.tiff  task-1-waiting.tiff  task-1-waiting2.tiff  task-2-blink-rush-1.tiff  task-2-blink-rush-2.tiff  task-2-waiting.tiff  the_brewsky.tiff  the_triple_w_bacon_2_rush_hour_1.tiff  the_triple_w_bacon_2_rush_hour_2.tiff  tons.tiff  where-is-egg.tiff
test/resources/burger/: blt.tiff  the_double_2.tiff  the_lonely_patty_1.tiff  the_lonely_patty_2.tiff  the_red_1.tiff  the_red_2.tiff  the_ryan_davis_2.tiff  the_thumbleweed.tiff  the_triple_1.tiff  the_triple_2.tiff  the_triple_w_bacon_1.tiff
test/resources/correction/: jumbo_cola_extra_onions.tiff  pepters_pasta.tiff
test/resources/date/: 2025-10-20T194832.111818.tiff  2025-10-20T194918.219432.tiff  2025-10-20T195021.071006.tiff  tasks-waiting-during-date.tiff
test/resources/error/: 2026-03-08T135429.335795.tiff
test/resources/ghost_tasks/: ee_8.tiff  il.tiff  ree.tiff  sc_oat_be.tiff
test/resources/ice_cream/: cherry_vanilla.tiff  nutty_chocolate.tiff  nutty_vanilla.tiff  the_yin_and_yang.tiff  trio_of_delicious.tiff
test/resources/soup/: chicken_noodle_soup.tiff  soup_du_jour.tiff
