[tool.poetry]
name = "cook-serve-delicious-bot"
version = "0.1.0"
description = ""
authors = ["jouramie <jouramie@hotmail.com>"]
readme = "README.md"
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows"
]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.0.76"
pillow = "^10.0.0"
frozendict = "^2.3.8"
pytesseract = "^0.3.10"
pynput = "^1.7.6"
pyobjc-framework-cocoa = {version = ">=9.2", markers = "sys_platform == \"darwin\""}
pyobjc-framework-quartz = {version = ">=9.2", markers = "sys_platform == \"darwin\""}
pywin32 = {version = ">=306", markers = "sys_platform == \"win32\""}
dxcam = {version = ">=0.0.5", markers = "sys_platform == \"win32\""}
isodate = "^0.6.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

