[tool.poetry]
name = "cook-serve-delicious-bot"
version = "0.1.0"
description = ""
authors = ["Jouramie <16137441+Jouramie@users.noreply.github.com>"]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows"
]

[tool.poetry.dependencies]
python = "^3.12"
botkit = { path = "./libs/botkit", develop = true }
immutabledict = "^4.3.1"
ortools = "^9.15.6755"

[tool.poetry.group.dev.dependencies]
black = "^26.3.0"
freezegun = "^1.2.2"
pytest = "^9.0.2"
pytest-mock = "^3.15.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

